# recipe

./: .gitignore  BACKUP_STRATEGY.md  METRO_BISTRO_SETUP.md  backup-metro-bistro.sh  check-all-services.sh  install-metro-bistro.sh  manage-postgres.sh  metro-bistro-backup.service  metro-bistro-backup.timer  metro-bistro-postgres.service  package-lock.json  pyproject.toml  restore-metro-bistro.sh  start-all-services.sh  stop-all-services.sh
ai_service/: AI_INFRA_PLAN.md  README.md  SYSTEMD_SETUP.md  ai-server.service  app.py  app_original.py  manage-service.sh  myrecipe_kitchen.crt  pre-download-model.py  pyproject.toml  setup-env.sh
ai_service/models/: model_loader.py
ai_service/services/: chat_service.py  import_service.py  recipe_analysis_service.py
ai_service/utils/: json_parser.py  recipe_api.py
backend/: manage-backend.sh  metro-bistro-backend.service  package-lock.json  package.json  setup-env.sh  tsconfig.json
backend/prisma/: DB_SCHEMA_UPDATE.md  schema.prisma
backend/public/: index.html
backend/public/assets/: index-DCN_Mq8t.js  index-DFMDHG85.js
backend/src/: index.ts
backend/src/controllers/: importJobController.ts  recipeController.ts  tagController.ts
backend/src/middleware/: auth.ts
backend/src/middlewares/: auth.ts
backend/src/routes/: importJobs.ts  recipes.ts  tags.ts
backend/src/services/: importJobService.ts  recipeAnalysisService.ts  tagService.ts  (+2 more)
docs/: FEATURE_STATUS.md  plan.md
web/: index.html  manage-ui.sh  metro-bistro-ui.service  package-lock.json  package.json  vite.config.ts
web/src/: App.tsx  i18n.ts  theme.ts
(+20 files in other folders)
